--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,13 @@ android:
     # The BuildTools version used
     - build-tools-25.0.3
 
-    # The SDK version used to compile the project
     - android-23
 
+    # The SDK version used to compile the project
+    - android-25
+
     # Additional components
+    - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
 
