--- a/.travis.yml
+++ b/.travis.yml
@@ -38,15 +38,15 @@ before_script:
   - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH, DESCRIBE=$DESCRIBE"
   - chmod +x gradlew
   # Begin spinning up an emulator in the background
-#  - make emulator
+  - make emulator
 
 script:
-#  - make quality
-#  - make test
-#  # Check if emulator has finished booting
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
-#  - travis_wait make e2e
+  - make quality
+  - make test
+  # Check if emulator has finished booting
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  - travis_wait make e2e
   - ./gradlew lintProdDebug --info
 
 after_script:
