--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 dist: precise # For 7.5GB of memory since the emulator requires a big chunk.
 env:
   matrix:
-    - ANDROID_TARGET=android-23
+    - ANDROID_TARGET=android-25
   global:
     - ADB_INSTALL_TIMEOUT=12
 android:
@@ -16,7 +16,7 @@ android:
     # The BuildTools version used
     - build-tools-25.0.3
 
-    - android-23
+#    - android-23
 
     # The SDK version used to compile the project
     - android-25
